examples/test/testpolicy13038.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13038
  namespace: namespace482
spec:
  podSelector:
    matchLabels:
      key18: value43
      key48: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value7
          key12: value28
          key37: value8
      podSelector:
        matchLabels:
          key39: value34
          key12: value1
          key3: value8
